[package]
name = "multi-tier-cache"
version = "0.6.0"
edition = "2021"
authors = ["thichuong <thichuong22022000@gmail.com>"]
description = "Customizable multi-tier cache with L1 (Moka in-memory) + L2 (Redis distributed) defaults, expandable to L3/L4+, cross-instance invalidation via Pub/Sub, stampede protection, and flexible TTL scaling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thichuong/multi-tier-cache"
documentation = "https://docs.rs/multi-tier-cache"
keywords = ["cache", "redis", "memcached", "multi-tier", "backends"]
categories = ["caching", "asynchronous", "database"]
readme = "README.md"

[dependencies]
# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
memcache = { version = "0.19", optional = true }
quick_cache = { version = "0.6", optional = true }
parking_lot = { version = "0.12", optional = true }

# Async runtime
tokio = { version = "1.49", features = ["sync", "macros", "time"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"], optional = true }
simd-json = { version = "0.17", optional = true }
sonic-rs = { version = "0.5.7", optional = true }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Async traits
async-trait = "0.1"

# Concurrency
dashmap = { version = "6.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
criterion = "0.8"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[features]
default = ["redis-streams"]
redis-streams = []
backend-memcached = ["memcache"]
backend-quickcache = ["quick_cache", "parking_lot"]
codec-postcard = ["postcard"]
codec-simd-json = ["simd-json"]
codec-sonic-rs = ["sonic-rs"]

[[bench]]
name = "cache_operations"
harness = false

[[bench]]
name = "stampede_protection"
harness = false

[[bench]]
name = "invalidation"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "multi_tier"
harness = false

[lints.clippy]

pedantic = "warn"


unwrap_used = "warn"

expect_used = "warn"

indexing_slicing = "warn"
